feat: show server-made thumbnails in lists and for avatars
